<resources>
    <!-- General -->
    <string name="app_name">Shipment Tracking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="npa">NPA</string>
    <string name="city">City</string>
    <string name="button_update">Update</string>
    <string name="button_next">Next</string>
    <string name="shipping_number">Shipping number</string>
    <string name="post_employee_update_tracking_status_dropdown">Status</string>
    <string-array name="post_employee_update_tracking_status_list">
        <item>@string/tracking_status_deposited</item>
        <item>@string/tracking_status_in_transit</item>
        <item>@string/tracking_status_delivered</item>
    </string-array>
    <string name="button_save">Save</string>


    <!-- TrackingStatus enum -->
    <string name="tracking_status_deposited">Deposited</string>
    <string name="tracking_status_in_transit">In transit</string>
    <string name="tracking_status_delivered">Delivered</string>

    <!--  Main  -->
    <string name="home_client">I\'m a client</string>
    <string name="home_post_employee">I\'m a post employee</string>

    <!-- ClientMain -->
    <string name="client_main_send_title">Send your package</string>
    <string name="client_main_send_description">Give us your package information and we will ship it for you</string>
    <string name="client_main_track_title">Track your package</string>
    <string name="client_main_track_description">Check your package information and status in real time</string>

    <!--  Navigation drawer  -->
    <string name="home_nav_title">Home</string>
    <string name="settings_nav_title">Settings</string>
    <string name="about_us_nav_title">About us</string>
    <string name="questions_answers_nav_title">Q&amp;A</string>

    <!--  ClientSendPackage -->
    <string name="client_send_package_activity_title">Package information</string>
    <string name="client_confirmation_package_activity_title">Package confirmation</string>
    <string name="client_package_sent_activity_title">Shipping number</string>
    <string name="client_send_package_title">Fill in your package information</string>
    <string name="weight">Weight</string>
    <string name="weight_suffix">grams</string>
    <string name="shipping_priority">Shipping priority</string>
    <string name="client_send_package_contact_information">Sender information :</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="location_error">Unable to retrieve location.\nPlease retry.</string>
    <string name="location_permission_denied">Access to location service denied.</string>
    <string name="invalid_lat_long_used">Invalid coordinates used</string>
    <string name="use_location_button">Use my location</string>
    <string name="address">Address</string>
    <string name="client_send_package_recipient_contact_information">Recipient information :</string>
    <string name="client_send_package_information">Package information :</string>
    <string name="client_package_confirmation_title">Package confirmation</string>
    <string name="button_send">Send</string>
    <string-array name="shipping_priority_items">
        <item>A</item>
        <item>B</item>
    </string-array>
    <string name="input_error">Mandatory</string>
    <string name="package_sent_title1">Your package has been sent !</string>
    <string name="package_sent_title2">Here is your shipping number :</string>
    <string name="button_finish">Finish</string>
    <string name="package_sent_description1">This number allows you to track your package via our tracking service.</string>
    <string name="package_sent_description2">Keep it preciously !</string>
    <string name="shipping_number_copied_toast">Shipping number copied</string>

    <!-- PostalEmployeeShippingNumber -->
    <string name="post_employee_shipping_number_title">Enter the shipping number</string>

    <!-- PostalEmployeeMain -->
    <string name="post_employee_main_title">Package No. %s</string>
    <string name="post_employee_main_tracking_update_card_title">Tracking update</string>
    <string name="post_employee_main_tracking_update_card_description">Bring the package closer to the recipient by adding a new tracking step</string>
    <string name="post_employee_main_tracking_update_card_image_description">Tracking update icon</string>
    <string name="post_employee_main_manage_package_card_title">Manage the package</string>
    <string name="post_employee_main_manage_package_card_description">With great power comes great responsibility. Safely manage packages and their status</string>
    <string name="post_employee_main_manage_package_card_image_description">Manage the package icon</string>

    <!-- PostalEmployeeUpdateTracking -->
    <string name="post_employee_update_tracking_title">Update tracking status</string>
    <string name="post_employee_update_tracking_notification_message">Tracking status updated</string>

    <!-- PostalEmployeeManagePackage -->
    <string name="post_employee_manage_package_package_information_title">Package information</string>
    <string name="post_employee_manage_package_package_statuses_title">Package tracking</string>
    <string name="post_employee_manage_package_button_delete_package">Delete package</string>
    <string name="post_employee_manage_package_delete_package_dialog_title">Delete package</string>
    <string name="post_employee_manage_package_delete_package_dialog_message">Are you sure to delete the package ?</string>
    <string name="post_employee_manage_package_delete_tracking_status_dialog_title">Delete %s</string>
    <string name="post_employee_manage_package_delete_tracking_status_dialog_message">Are you sure to delete the %s status ?</string>
    <string name="post_employee_manage_package_dialog_button_ok">Yes</string>
    <string name="post_employee_manage_package_dialog_button_cancel">Cancel</string>
    <string name="post_employee_manage_package_snackbar_message_package_info_saved">Package information saved</string>
    <string name="post_employee_manage_package_snackbar_message_package_deleted">Package deleted</string>


    <!--  AboutUs -->
    <string name="about_us_description">Shipment-tracking is a mobile application that allows you to send and track the delivery of a package with ease.
        \nThis service is a product of the DC Shipment company and has been developed to be intuitive and easy to use for as many people as possible.
        \n\nTake as much pleasure in using the application as we did in developing it!</string>
    <string name="app_publisher">Published by DC Shipment</string>
    <string name="app_version">Version 1.0</string>

    <!--  QuestionsAnswers -->
    <string name="questionsanswers_category_generalities">Generalities</string>
    <string name="questionsanswers_parcel_shipment_price_question">How much does it cost me to send a package?</string>
    <string name="questionsanswers_parcel_shipment_price_answer">- Package 0kg - 2kg: 7 CHF (B) / 9 CHF (A)
        \n- Package 2kg - 10kg: 12 CHF (B) / 14 CHF (A)
        \n- Parcel 10kg - 30kg: 20 CHF (B) / 25 CHF (A)
        \n\nThe aforementioned prices are valid for a shipment on the national territory. You will find country-specific delivery prices in the "International Information" service on our website.</string>
    <string name="questionsanswers_data_safe_question">Is my data safe?</string>
    <string name="questionsanswers_data_safe_answer">We guarantee the security of your data. The Shipment-tracking application complies with the directives of Swiss law on data protection.</string>
    <string name="questionsanswers_data_storage_question">Where is my data stored?</string>
    <string name="questionsanswers_data_storage_answer">All data is saved on servers located in Switzerland.</string>
    <string name="questionsanswers_category_postal_service">Postal services</string>
    <string name="questionsanswers_how_shipment_going_question">How is the shipment going?</string>
    <string name="questionsanswers_how_shipment_going_answer">Packages are sent according to the priority of the shipment. Priority B is the default option and guarantees delivery within the next three business days. Larger packages can be posted as priority A. These will be shipped as quickly as possible and usually arrive the next business day after the package is dropped off. It should be noted that the transit times differ depending on the destination. You can find country-specific transit times in the "International Information" service on our website.</string>
    <string name="questionsanswers_realtime_package_location_question">Can I know where my package is in real time?</string>
    <string name="questionsanswers_realtime_package_location_answer">Yes. We have set up a parcel tracking service that allows you to follow your parcel in real time throughout its delivery. You can find this service on the customer home page of the application. All you need to do is enter the shipment number of the package that was sent to you when registering your package to view the routing information. Parcel tracking is only available on the national territory.</string>

    <!--  Settings -->
    <string name="preference_language_category_title">Language</string>
    <string name="preference_language_dropdown_title">Change language</string>

    <!-- ClientTrackPackage-->
    <string name="client_track_package_activity_title">Track your package</string>
    <string name="track_package_title">Enter your shipping number</string>
    <string name="button_track">Track</string>
    <string name="client_track_package_information_activity_title">Your package</string>
    <string name="package_status">Package status :</string>
    <string name="client_track_package_no_shipping_number_found_error_message">No package found for this shipping number.\nPlease retry.</string>

</resources>