<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_nav_title" />
        <item android:id="@+id/nav_questions_answers"
            android:icon="@drawable/ic_question_answer"
            android:title="@string/questions_answers_nav_title" />
        <item android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us_nav_title" />
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_preference"
            android:title="@string/settings_nav_title" />
    </group>
</menu>