<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsAnswersActivity"
    android:id="@+id/questions_answers_drawer_layout">

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                layout="@layout/toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/questionsanswers_category_generalities"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:background="@color/cloud_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/questionsanswers_parcel_shipment_price_question"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/questionsanswers_parcel_shipment_price_answer"
                        android:textSize="16sp"
                        android:textColor="@color/black" />

                    <View
                        style="@style/Divider"
                        android:layout_marginTop="6dp"
                        android:background="@color/concrete_grey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/questionsanswers_data_safe_question"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/questionsanswers_data_safe_answer"
                        android:textSize="16sp"
                        android:textColor="@color/black" />

                    <View
                        style="@style/Divider"
                        android:layout_marginTop="6dp"
                        android:background="@color/concrete_grey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/questionsanswers_data_storage_question"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/questionsanswers_data_storage_answer"
                        android:textSize="16sp"
                        android:textColor="@color/black" />

                    <View
                        style="@style/Divider"
                        android:layout_marginTop="6dp"
                        android:background="@color/concrete_grey" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/questionsanswers_category_postal_service"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:background="@color/cloud_grey"
                    android:layout_marginTop="15dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/questionsanswers_how_shipment_going_question"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/questionsanswers_how_shipment_going_answer"
                        android:textSize="16sp"
                        android:textColor="@color/black" />

                    <View
                        style="@style/Divider"
                        android:layout_marginTop="6dp"
                        android:background="@color/concrete_grey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/questionsanswers_realtime_package_location_question"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/questionsanswers_realtime_package_location_answer"
                        android:textSize="16sp"
                        android:textColor="@color/black" />

                    <View
                        style="@style/Divider"
                        android:layout_marginTop="6dp"
                        android:background="@color/concrete_grey" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include
        layout="@layout/navigation_view" />
</androidx.drawerlayout.widget.DrawerLayout>