<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClientPackageSentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/package_sent_title1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/package_sent_title2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_corner"
        android:layout_marginHorizontal="30dp"
        >

        <TextView
            android:id="@+id/shipping_number_to_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="35566778"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/button_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_copy" />

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/package_sent_description1"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/package_sent_description2"
        android:textSize="18sp"
        android:layout_marginHorizontal="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_finish"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:id="@+id/button_finish"/>


</LinearLayout>