<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClientTrackPackageActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_package_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_shipping_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shipping_number"
        android:layout_margin="30dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxCornerRadiusTopEnd="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_shipping_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:singleLine="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_track"
        android:layout_gravity="center"
        android:id="@+id/button_track"/>

</LinearLayout>