<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostEmployeeShippingNumberActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_employee_shipping_number_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/post_employee_shipping_number_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shipping_number"
        android:layout_margin="30dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxCornerRadiusTopEnd="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_employee_shipping_number_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/post_employee_shipping_number_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:layout_gravity="center" />

</LinearLayout>