<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_employee_update_tracking_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_margin="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/post_employee_update_tracking_input_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_employee_update_tracking_status_dropdown"
            android:layout_marginVertical="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/post_employee_update_tracking_status_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/post_employee_update_tracking_input_npa"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/npa"
                android:layout_marginVertical="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxCornerRadiusTopEnd="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/post_employee_update_tracking_input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxCornerRadiusTopEnd="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/post_employee_update_tracking_button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_update"
            android:layout_gravity="center"
            android:layout_margin="30dp" />

    </LinearLayout>

</ScrollView>