<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity"
    android:id="@+id/about_us_drawer_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/company_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us_description"
                android:justificationMode="inter_word"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_publisher"
                android:layout_marginTop="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_version"
                android:layout_marginTop="2dp" />

        </LinearLayout>

    </LinearLayout>

    <include
        layout="@layout/navigation_view" />

</androidx.drawerlayout.widget.DrawerLayout>