<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClientMainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="#dbdbdb"
        android:layout_marginTop="100dp"
        android:id="@+id/client_main_sendPackage_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_package" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_main_send_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_main_send_description"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="#dbdbdb"
        android:layout_marginTop="50dp"
        android:id="@+id/client_main_trackPackage_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_tracking_package" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_main_track_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_main_track_description"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>